mywork/force-app/main/default/objects/Component__c/fields/Field_Modified_Data__c.field-meta.xml
<CustomField>
    <fullName>Field_Modified_Data__c</fullName>
    <label>Field Modified Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>