mywork/force-app/main/default/objects/Component__c/fields/Instance_Count__c.field-meta.xml
<CustomField>
    <fullName>Instance_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of instances that this component exists in.</description>
    <inlineHelpText>The number of instances that this component exists in.</inlineHelpText>
    <label>Instance Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>