mywork/force-app/main/default/objects/Component__c/fields/Is_Test_Class__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Class</label>
    <description>Is this component an apex test class?</description>
    <type>Checkbox</type>
</CustomField>