mywork/force-app/main/default/objects/Component__c/fields/Last_Modified_Users__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Users__c</fullName>
    <description>Aggregates the users who last modified the component across all instances</description>
    <label>Last Modified Users</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>