mywork/force-app/main/default/objects/Component__c/fields/Overall_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Last_Modified_Date__c</fullName>
    <description>The most recent modification timestamp across all environments.</description>
    <label>Overall Last Modified Date</label>
    <type>DateTime</type>
</CustomField>