mywork/force-app/main/default/objects/Component__c/fields/Reference_Data_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_Data_2__c</fullName>
    <label>Reference Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>