mywork/force-app/main/default/objects/Component__c/fields/Source_Instances__c.field-meta.xml
<CustomField>
    <fullName>Source_Instances__c</fullName>
    <label>Source Instances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>