mywork/force-app/main/default/objects/Component__c/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <description>Salesforce specific components.</description>
    <label>Salesforce</label>
</RecordType>