mywork/force-app/main/default/objects/Component__c/validationRules/Instance_Lookup_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Instance_Lookup_Required</fullName>
    <active>false</active>
    <description>Require the user to select an Instance record if the field modified data is empty</description>
    <errorConditionFormula>AND(
 ISBLANK(Field_Modified_Data__c),
 !ISPICKVAL(Type__c, 'Apex Unit Test'),
 !ISPICKVAL(Type__c, 'Apex Class'),
 !ISPICKVAL(Type__c, 'Apex Trigger'))</errorConditionFormula>
    <errorDisplayField>Instance__c</errorDisplayField>
    <errorMessage>You must tie this component record to an Instance.</errorMessage>
</ValidationRule>