mywork/force-app/main/default/objects/Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Component__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>